# introtodeeplearning

./: .gitignore  README.md  pyproject.toml
lab1/: PT_Part1_Intro.ipynb  PT_Part2_Music_Generation.ipynb  TF_Part1_Intro.ipynb  TF_Part2_Music_Generation.ipynb
lab1/solutions/: PT_Part1_Intro_Solution.ipynb  PT_Part2_Music_Generation_Solution.ipynb  TF_Part1_Intro_Solution.ipynb  TF_Part2_Music_Generation_Solution.ipynb
lab2/: PT_Part1_MNIST.ipynb  PT_Part2_Debiasing.ipynb  TF_Part1_MNIST.ipynb  TF_Part2_Debiasing.ipynb
lab2/solutions/: PT_Part1_MNIST_Solution.ipynb  PT_Part2_Debiasing_Solution.ipynb  TF_Part1_MNIST_Solution.ipynb  TF_Part2_Debiasing_Solution.ipynb
lab3/: LLM_Finetuning.ipynb
lab3/solutions/: LLM_Finetuning_Solution.ipynb
mitdeeplearning/: lab3_old.py
xtra_labs/rl_pong/: RL.ipynb
xtra_labs/rl_pong/solutions/: RL_Solution.ipynb
xtra_labs/rl_selfdriving/: RL.ipynb
xtra_labs/rl_selfdriving/solutions/: RL_Solution.ipynb
xtra_labs/uncertainty/: Part1_IntroductionCapsa.ipynb  Part2_BiasAndUncertainty.ipynb
