[project]
name = "introtodeeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comet-ml>=3.53.2",
    "datasets>=4.3.0",
    "gymnasium>=1.2.1",
    "jupyterlab>=4.4.10",
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "openai>=2.6.1",
    "opencv-python>=4.12.0.88",
    "opik>=1.8.94",
    "pandas-stubs==2.3.2.250926",
    "peft>=0.17.1",
    "pyvirtualdisplay>=3.0",
    "regex>=2025.10.23",
    "scikit-video>=1.1.11",
    "scipy-stubs==1.16.3.0",
    "seaborn>=0.13.2",
    "tensorflow-cpu>=2.20.0",
    "tensorflow-probability>=0.25.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    #    "torchvision",
    "vista>=2.0.6",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu"},
]
[tool.uv.build-backend]
module-name = "mitdeeplearning"
module-root = ""

[tool.uv.workspace]
members = [ ]
